# API

./: README.md  docker-compose.yml  pyproject.toml
api/: urls.py  views.py
api/contrib/: env-sample
api/templates/: cotacoes.html
cotacao/: asgi.py  settings.py  urls.py  wsgi.py
