[tool.poetry]
name = "davidson"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
requests = "^2.32.3"
dj-database-url = "^2.3.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
psycopg2 = "^2.9.10"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
